--- a/project/Libraries/DroidPlugin/res/values/styles.xml
+++ b/project/Libraries/DroidPlugin/res/values/styles.xml
@@ -23,8 +23,8 @@
 **/
 -->
 <resources>
-    <style name="DroidPluginTheme" parent="android:Theme.Light.NoTitleBar" >
-        <item name="android:windowBackground">@drawable/plugin_activity_loading</item>
+    <style name="DroidPluginTheme" parent="android:Theme.Light.NoTitleBar.Fullscreen" >
+        <item name="android:windowBackground">@drawable/loading</item>
     </style>
 
     <style name="DroidPluginThemeDialog" parent="android:Theme.Dialog" >
