--- a/project/demo/src/main/res/layout/fragment_install.xml
+++ b/project/demo/src/main/res/layout/fragment_install.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/loading">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/loading"
         android:scaleType="fitXY"
+        android:visibility="gone"
         />
 
     <LinearLayout
+        android:id="@+id/progress_container"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/download_progress"
-        android:padding="10dp">
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone">
         <TextView
             android:id="@+id/info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:textColor="@android:color/black"
+            android:layout_marginBottom="20dp"
+            android:textColor="@android:color/white"
             android:layout_gravity="center_horizontal"/>
         <ProgressBar
             android:id="@+id/progress"
@@ -35,4 +36,4 @@
 
 
 
-</RelativeLayout>
+</FrameLayout>
