--- a/project/demo/src/main/res/layout/fragment_install.xml
+++ b/project/demo/src/main/res/layout/fragment_install.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/progress_container"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/loading">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/loading"
-        android:scaleType="fitXY"
-        android:visibility="gone"
-        />
-
-    <LinearLayout
+    <!--<LinearLayout
         android:id="@+id/progress_container"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="bottom|center_horizontal"
@@ -24,16 +16,47 @@
             android:id="@+id/info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="5dp"
             android:textColor="@android:color/white"
             android:layout_gravity="center_horizontal"/>
         <ProgressBar
             android:id="@+id/progress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="440dp"
+            android:layout_height="16dp"
+            android:progressDrawable="@drawable/progress"
             style="?android:attr/progressBarStyleHorizontal"/>
     </LinearLayout>
+    -->
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="440dp"
+        android:layout_height="16dp"
+        android:progressDrawable="@drawable/progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="18dp"
+        android:layout_centerHorizontal="true"/>
 
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:textColor="@android:color/white"
+        android:layout_above="@id/progress"
+        android:layout_centerHorizontal="true"
+        android:textSize="17sp"
+        android:maxLines="1"/>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/progress_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/info"
+        android:layout_alignEnd="@id/progress"
+        android:layout_marginEnd="30dp"
+        android:textColor="#D1F136"
+        android:textSize="14sp"
+        android:maxLines="1"/>
+</RelativeLayout>
