--- a/project/demo/src/main/res/values/styles.xml
+++ b/project/demo/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
-
+        <item name="android:windowBackground">@drawable/loading</item>
     </style>
 
 </resources>
