--- a/project/demo/src/main/res/layout/fragment_install.xml
+++ b/project/demo/src/main/res/layout/fragment_install.xml
@@ -36,7 +36,8 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="18dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/progress_background"/>
 
     <TextView
         android:id="@+id/info"
